<resources>
    <string name="app_name">Medical Help</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="personal_health_record_application">Personal health record application</string>
    <string name="sign_in">Sign In</string>
    <string name="unlock_your_personal_nmedical_records">Unlock your personal\nmedical records</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forget_password">Forget Password?</string>
    <string name="don_t_have_account">Don\'t have account?<b> SignUp</b></string>
    <string name="sign_in_with_google">Sign In With Google</string>
    <string name="sign_in_with_mobilenumber">Sign In With MobileNumber</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_password">Create Password</string>
    <string name="fullname">Fullname</string>
    <string name="sign_up_with_phone_number">Sign Up with phone number</string>
    <string name="sign_up_with_google">Sign Up with Google</string>
    <string name="already_have_an_account_login">Already have an account?<b> Login</b></string>
    <string name="reseting_heading">Enter your email we will send you\nreset password link.</string>
    <string name="send_reset_password_link">Send reset password link</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="send_code">Send Code</string>
    <string name="verify_your_nphone_number">Verify your\nPhone Number</string>
    <string name="verification_code">Verification Code</string>
    <string name="please_type_the_verification_code_sent">Please type the verification code sent</string>
    <string name="temp_number">to +91 1234567890</string>
    <string name="verify_code">Verify Code</string>
    <string name="profile">Profile</string>
    <string name="temp_userFullme">Dheeraj Prajapat</string>
    <string name="temp_email">dheerajprajapat@gmail.com</string>
    <string name="temp_weight_height">Height: 5ft 9in | Weight: 70kg</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="save">Save</string>
    <string name="gender">Gender</string>
    <string name="home">Home</string>
    <string name="medical_help">Medical Help</string>
    <string name="hi">Hi!</string>
    <string name="temp_name">Dheeraj Prajapat</string>
    <string name="how_s_your_condition">How\'s your condition?</string>
    <string name="medical_nrecords">Medical\nRecords</string>
    <string name="covid_19_ncheck">Covid-19\nCheck</string>
    <string name="covid_19_nstatus">Covid-19\nStatus</string>
    <string name="menstrual_nperiod">Menstrual\nPeriod</string>
    <string name="add_medical_record">Add Medical Record</string>
    <string name="select_category">Select Category</string>
    <string name="diagnose">Diagnose</string>
    <string name="select_date">Select Date</string>
    <string name="general_condition">General Condition</string>
    <string name="blood_presure_mmhg">Blood Presure(mmHg)</string>
    <string name="body_temperature">Body Temperature(Celsius)</string>
    <string name="heart_rate_bpm">Heart Rate(Bpm)</string>
    <string name="save_record">Save Record</string>
    <string name="checkup">Checkup</string>
    <string name="corona_negative">Corona Negative</string>
    <string name="temp_date">Mon ,20 Apr 2022 00:00</string>
    <string name="medical_record_details">Medical Record Details</string>
    <string name="category">Category</string>
    <string name="visit_date">Visit date</string>
    <string name="please_wait">Please wait</string>
</resources>