<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.PreHome.ForgetPasswordFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_80sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/security" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/forget_password"
                android:textColor="@color/skyblue"
                android:textSize="@dimen/_24sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/reseting_heading"
                android:textColor="@color/skyblue"
                android:textSize="@dimen/_14sdp" />


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_15sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:hint="@string/email"
                app:startIconDrawable="@drawable/ic_email"
                app:startIconTint="@color/skyblue">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/forgetEmail"
                    android:inputType="textEmailAddress"
                    android:layout_width="match_parent"
                    android:fontFamily="@font/nunito_medium"
                    android:layout_height="wrap_content" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="@color/white"
                android:id="@+id/sendResetLink"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:layout_marginEnd="@dimen/_20sdp"
                android:background="@drawable/common_button_bck"
                android:fontFamily="@font/nunito_medium"
                android:paddingTop="@dimen/_10sdp"
                android:paddingBottom="@dimen/_10sdp"
                android:text="@string/send_reset_password_link"
                android:textAlignment="center"
                android:textSize="@dimen/_16sdp" />
        </LinearLayout>
    </ScrollView>

</FrameLayout>