<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.fragments.Home.RecordsDetailsFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RelativeLayout
                android:layout_marginBottom="@dimen/_10sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_width="match_parent"
                android:id="@+id/headingPortion"
                android:layout_height="wrap_content">

                <ImageView
                    android:layout_marginStart="@dimen/_15sdp"
                    android:id="@+id/back_button"
                    android:layout_width="@dimen/_25sdp"
                    android:layout_height="@dimen/_25sdp"
                    android:src="@drawable/ic_round_arrow_back_24" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_gravity="center"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_toEndOf="@id/back_button"
                    android:fontFamily="@font/nunito_semi_bold"
                    android:text="@string/medical_record_details"
                    android:textColor="@color/black"
                    android:textSize="@dimen/_16sdp" />
            </RelativeLayout>
            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:background="@color/gray"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_below="@+id/headingPortion"
                android:layout_height="match_parent"
                android:layout_marginTop="@dimen/_10sdp"
                android:layout_marginStart="@dimen/_10sdp"
                android:paddingStart="@dimen/_5sdp"
                android:orientation="vertical">
               <TextView
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:text="@string/category"
                   android:textSize="@dimen/_14sdp"
                   android:fontFamily="@font/nunito_medium"
                   android:textColor="@color/black"/>

                <RelativeLayout
                    android:layout_marginEnd="@dimen/_15sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/drop_down_background">
                    <ImageView
                        android:layout_width="@dimen/_40sdp"
                        android:layout_height="@dimen/_40sdp"
                        android:layout_marginTop="@dimen/_5sdp"
                        android:layout_marginBottom="@dimen/_5sdp"
                        android:layout_marginStart="@dimen/_5sdp"
                        android:id="@+id/item_record_category"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/checkup"
                        android:textSize="@dimen/_14sdp"
                        android:layout_toRightOf="@id/item_record_category"
                        android:layout_centerVertical="true"
                        android:layout_marginStart="@dimen/_15sdp"
                        android:fontFamily="@font/nunito_medium"
                        android:textColor="@color/black"/>
                </RelativeLayout>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diagnose"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/nunito_medium"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/diagnose"
                    android:id="@+id/item_diagnose"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/nunito_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/visit_date"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/nunito_medium"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_date"
                    android:id="@+id/visit_date"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/nunito_medium" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="2dp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:background="@color/gray"/>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/general_condition"
                    android:textSize="@dimen/_16sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/nunito_medium"
                    android:textColor="@color/black"/>


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/blood_presure_mmhg"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/nunito_medium"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_date"
                    android:id="@+id/blood_presure"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/nunito_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/body_temperature"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/nunito_medium"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_date"
                    android:id="@+id/body_temp"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/nunito_medium" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/heart_rate_bpm"
                    android:textSize="@dimen/_14sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:fontFamily="@font/nunito_medium"
                    android:textColor="@color/black"/>
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/temp_date"
                    android:id="@+id/heart_rate"
                    android:textSize="@dimen/_12sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/nunito_medium" />
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>