<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.PreHome.RegisterFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="UselessParent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/_50sdp"
                android:orientation="vertical"
                tools:ignore="UselessParent">

            <ImageView
                android:id="@+id/logo"
                android:layout_width="@dimen/_50sdp"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_80sdp"
                android:contentDescription="@string/app_name"
                android:src="@drawable/logo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/nunito_medium"
                    android:text="@string/sign_up"
                    android:textColor="@color/skyblue"
                    android:textSize="@dimen/_24sdp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_10sdp"
                android:fontFamily="@font/nunito_medium"
                android:text="@string/unlock_your_personal_nmedical_records"
                android:textColor="@color/skyblue"
                android:textSize="@dimen/_14sdp" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_30sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:hint="@string/fullname"
                    app:startIconDrawable="@drawable/ic_person"
                    app:startIconTint="@color/skyblue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_fullname"
                        android:inputType="text"
                        android:fontFamily="@font/nunito_medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:hint="@string/email"
                    app:startIconDrawable="@drawable/ic_email"
                    app:startIconTint="@color/skyblue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_email"
                        android:inputType="textEmailAddress"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/nunito_medium"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:hint="@string/create_password"
                    app:passwordToggleEnabled="true"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    app:startIconTint="@color/skyblue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:inputType="textPassword"
                        android:fontFamily="@font/nunito_medium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_15sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:hint="@string/confirm_password"
                    app:startIconDrawable="@drawable/ic_baseline_lock_24"
                    app:passwordToggleEnabled="true"
                    app:startIconTint="@color/skyblue">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_confirmpassword"
                        android:layout_width="match_parent"
                        android:fontFamily="@font/nunito_medium"
                        android:inputType="textPassword"
                        android:layout_height="wrap_content" />
                </com.google.android.material.textfield.TextInputLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:textColor="@color/white"
                    android:id="@+id/signUpBtn"
                    android:layout_marginStart="@dimen/_20sdp"
                    android:layout_marginTop="@dimen/_20sdp"
                    android:layout_marginEnd="@dimen/_20sdp"
                    android:background="@drawable/common_button_bck"
                    android:fontFamily="@font/nunito_medium"
                    android:paddingTop="@dimen/_10sdp"
                    android:paddingBottom="@dimen/_10sdp"
                    android:text="@string/sign_up"
                    android:textAlignment="center"
                    android:textSize="@dimen/_16sdp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:id="@+id/phoneSignUp"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:fontFamily="@font/nunito_medium"
                    android:text="@string/sign_up_with_phone_number"
                    android:textColor="@color/skyblue"
                    android:textSize="@dimen/_14sdp" />

                <LinearLayout
                    android:id="@+id/googleSignUpBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_10sdp"
                    android:orientation="horizontal"
                    tools:ignore="UseCompoundDrawables">

                    <ImageView
                        android:layout_width="@dimen/_25sdp"
                        android:layout_height="@dimen/_25sdp"
                        android:contentDescription="@string/app_name"
                        android:src="@drawable/google" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="@dimen/_10sdp"
                        android:fontFamily="@font/nunito_medium"
                        android:text="@string/sign_up_with_google"
                        android:textColor="@color/skyblue"
                        android:textSize="@dimen/_14sdp" />
                </LinearLayout>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="@dimen/_25sdp"
                    android:textColor="@color/skyblue"
                    android:textSize="@dimen/_14sdp"
                    android:id="@+id/loginUpButton"
                    android:fontFamily="@font/nunito_medium"
                    android:layout_height="wrap_content"
                    android:text="@string/already_have_an_account_login"/>
            </LinearLayout>
        </RelativeLayout>
    </ScrollView>
</FrameLayout>